# magnetometer-time-series-simulator

./: .gitignore  CLAUDE.md  L058.txt  README.md  Simulator Documentation.docx  Simulator-class  environment.yml  mag-sim.ipynb  pyproject.toml
magsim/: __init__.py  config.py  igrf.py  noise.py  normalization.py  sensors.py  simulator.py  sources.py  types.py
tests/: conftest.py  test_igrf.py  test_noise.py  test_normalization.py  test_sensors.py  test_simulator.py  test_sources.py  test_vectorization.py
