[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magsim"
version = "0.1.0"
description = "Magnetometer time series simulator for magnetic source localization"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "ppigrf>=1.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.6"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["magsim*"]
